--- a/odoo_account_type_menu/views/account_type_menu.xml
+++ b/odoo_account_type_menu/views/account_type_menu.xml
@@ -14,7 +14,7 @@
         <field name="model">account.account.type</field>
         <field name="inherit_id" ref="account.view_account_type_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='include_initial_balance']" position="after">
+            <xpath expr="//field[@name='type']" position="after">
                 <field name="internal_group"/>
             </xpath>
         </field>
